@@ -109,6 +109,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25638: Optimized ElementTree.iterparse(); it is now 2x faster.
+
 - Issue #25761: Improved detecting errors in broken pickle data.
 
 - Issue #25717: Restore the previous behaviour of tolerating most fstat()
